--- a/requirements.txt
+++ b/requirements.txt
@@ -1,181 +1,29 @@
-aiomysql==0.2.0
-amqp==5.1.1
-anyio==3.7.0
-appdirs==1.4.3
-apturl==0.5.2
-asgiref==3.6.0
-astroid==2.3.3
-async-generator==1.10
-attrs==22.2.0
+asgiref==3.7.2
+async-timeout==4.0.2
+attrs==23.1.0
 autobahn==23.1.2
 Automat==22.10.0
 backports.zoneinfo==0.2.1
-bcrypt==3.1.7
-beautifulsoup4==4.11.2
-billiard==3.6.4.0
-blinker==1.4
-boto3==1.26.124
-botocore==1.29.124
-Brlapi==0.7.0
-celery==5.2.7
-certifi==2022.12.7
 cffi==1.15.1
-cfscrape==2.1.1
 channels==4.0.0
-chardet==3.0.4
-charset-normalizer==3.0.1
-click==8.1.3
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.2.0
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
+channels-redis==4.1.0
 constantly==15.1.0
-cryptography==41.0.2
-cupshelpers==1.0
+cryptography==41.0.3
 daphne==4.0.0
-databases==0.7.0
-dbus-python==1.2.16
-defer==1.0.6
-distlib==0.3.0
-distro==1.4.0
-distro-info===0.23ubuntu1
-Django==4.0
-django-froala-editor==4.0.17
-dnspython==1.16.0
-duplicity==0.8.12.0
-entrypoints==0.3
-exceptiongroup==1.1.1
-fastapi==0.97.0
-fasteners==0.14.1
-filelock==3.0.12
-flower==1.2.0
-future==0.18.2
-fuzzywuzzy==0.18.0
-greenlet==2.0.2
-gunicorn==20.1.0
-h11==0.14.0
-httplib2==0.14.0
-humanize==4.6.0
+Django==4.2.4
 hyperlink==21.0.0
 idna==3.4
-importlib-metadata==1.5.0
 incremental==22.10.0
-isodate==0.6.1
-isort==4.3.4
-Jinja2==2.10.1
-jmespath==1.0.1
-keyring==18.0.1
-kombu==5.2.4
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lazy-object-proxy==1.4.3
-Levenshtein==0.20.9
-lockfile==0.12.2
-logilab-common==1.4.3
-louis==3.12.0
-lxml==4.9.3
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==1.1.0
-mccabe==0.6.1
-meld==3.20.2
-monotonic==1.5
-more-itertools==4.2.0
-netifaces==0.10.4
-numpy==1.24.2
-oauthlib==3.1.0
-olefile==0.46
-outcome==1.2.0
-packaging==23.0
-pandas==1.5.3
-paramiko==2.6.0
-pexpect==4.6.0
-Pillow==9.4.0
-platformdirs==3.9.1
-prometheus-client==0.16.0
-prompt-toolkit==3.0.38
-protobuf==3.6.1
-proton-client==0.7.1
-protonvpn-cli==3.13.0
-protonvpn-gui==1.12.0
-protonvpn-nm-lib==3.14.0
-psutil==5.5.1
+msgpack==1.0.5
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
-pycairo==1.16.2
 pycparser==2.21
-pycups==1.9.73
-pydantic==1.10.9
-PyGObject==3.36.0
-PyJWT==1.7.1
-pylint==2.4.4
-pymacaroons==0.13.0
-PyMySQL==1.0.3
-PyNaCl==1.3.0
 pyOpenSSL==23.2.0
-pyparsing==3.0.9
-pyRFC3339==1.1
-pyrfc6266==1.0.2
-PySocks==1.7.1
-python-apt==2.0.1+ubuntu0.20.4.1
-python-dateutil==2.8.2
-python-debian==0.1.36+ubuntu1.1
-python-dotenv==1.0.0
-python-gnupg==0.4.5
-python-Levenshtein==0.20.9
-pythondialog==3.4.0
-pytz==2022.7.1
-pyxdg==0.26
-PyYAML==5.3.1
-rapidfuzz==2.15.0
-reportlab==3.5.34
-requests==2.28.2
-requests-file==1.5.1
-requests-toolbelt==1.0.0
-requests-unixsocket==0.2.0
-s3transfer==0.6.0
-SecretStorage==2.3.1
-selenium==4.8.2
+redis==4.6.0
 service-identity==23.1.0
-simplejson==3.16.0
 six==1.16.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.4
-sourcery==1.2.0
-SQLAlchemy==1.4.48
-sqlparse==0.4.3
-ssh-import-id==5.10
-starlette==0.27.0
-stripe==5.4.0
-systemd-python==234
-tornado==6.2
-tqdm==4.65.0
-trio==0.22.0
-trio-websocket==0.10.0
+sqlparse==0.4.4
 Twisted==22.10.0
 txaio==23.1.1
-typing-extensions==4.6.3
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-undetected-chromedriver==3.4.6
-urllib3==1.26.15
-usb-creator==0.3.7
-vine==5.0.0
-virtualenv==20.0.17
-wadllib==1.3.3
-wcwidth==0.2.6
-webdriver-manager==3.8.5
-websockets==10.4
-wrapt==1.11.2
-wsproto==1.2.0
-xkit==0.0.0
-zeep==4.2.1
-zipp==1.0.0
+typing-extensions==4.7.1
 zope.interface==6.0
